<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Panta</string>
    <string name="descripcion_aplicacion">Panta es la plataforma que te permite compartir el carro dentro de la Universidad</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_logout">Salir</string>
    <string name="action_filtrar">Filtrar Viajes</string>
    <string name="action_refrescar">Refrescar</string>
    <string name="action_compartir">Compartir</string>
    <string name="action_favorito">Guardar</string>
    <string name="action_block_user">Bloquear Usuario</string>
    <string name="drawer_open">Menu Abierto</string>
    <string name="drawer_close">Menu Cerrado</string>
    <string name="ok">OK</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Viajes</item>
        <item>Publicar Viaje</item>
        <item>Mis Viajes</item>
        <item>Sobre Panta</item>
        <item>Ajustes</item>
        <item>Salir</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_action_about</item>
        <item>@drawable/ic_action_settings</item>
        <item>@drawable/ic_signout</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <!-- Error Descriptions -->
    <string name="api_publish_ok">Tu viaje ha sido publicado.</string>
    <string name="api_error_publishing">Ocurrió un error al publicar, vuelve a intentarlo.</string>
    <string name="hint_campo_busqueda">Filtrar Viajes</string>
    <string name="nuevo_viaje_descipcion">Para publicar un nuevo viaje, llena estos campos</string>
    <string name="form_destino_viaje">Destino:</string>
    <string name="destino_uniandes">Uniandes</string>
    <string name="destino_home">Casa</string>
    <string name="form_publicar_viaje">Publicar</string>
    <string name="dummy_hour">6:20</string>
    <string name="dummy_usuario">Alejandro Hernandez</string>
    <string name="dummy_descripcion">Salgo por la <b>#7</b> hasta <b>#Palatino</b></string>
    <string name="dummy_cupos"><b>3</b> cupos</string>
    <string name="boton_detalle_llamar">Llamar</string>
    <string name="boton_detalle_sms">SMS</string>
    <string name="sms_question">Hola, ¿todavía tienes cupo? (vía Panta)</string>
    <string name="publicar_descripcion_hint">Ej. <i>Salgo para #Palatino por toda la #7ma</i></string>
    <string name="autores">Desarrollada por Santiago Rojas y Jorge Hernandez</string>
    <string name="cupos_viaje">Cupos</string>
    <string name="error_max_6_seats">Máximo 6 cupos por carro</string>
    <string name="dummy_hora_contextual">en 2 minutos</string>
    <string name="title_activity_busqueda_viajes">Buscar Viajes</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_registro">Registro</string>
    <string name="ayuda_link_crear_cuenta">Crear una nueva cuenta</string>
    <string name="explicacion_registro">Ingresa los siguientes datos para registrarte en Panta</string>
    <string name="campo_registro_nombre_hint">Nombre Apellido</string>
    <string name="campo_registro_email_hint">Cuenta Uniandes</string>
    <string name="campo_registro_telefono_hint">Celular</string>
    <string name="campo_registro_registrarse">Registrarme</string>
    <string name="register_progress_signing_in">Regsitrándote</string>
    <string name="title_activity_lugar_chooser">Lugar de Salida</string>
    
    
    
    
     <string name="action_enviar_ubicacion">Definir ubicación de salida</string>
    
    

</resources>
