<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_action_favorite"
        android:showAsAction="ifRoom"
        android:title="@string/action_favorito"/>
    <item
        android:id="@+id/action_block_user"
        android:icon="@drawable/ic_ban"
        android:showAsAction="ifRoom"
        android:title="@string/action_block_user"/>
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_action_share"
        android:showAsAction="never"
        android:title="@string/action_compartir"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>