<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center_vertical" >

    <TextView
        android:id="@+id/descripcion_publicar_viaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="38dp"
        android:text="@string/app_name"
        android:textColor="@color/panta_azul"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/detalle_hora_contextual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:text="v 1.3"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descripcion_publicar_viaje"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:maxWidth="150dp"
        android:src="@drawable/panta" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="35dp"
        android:gravity="center_horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/descripcion_aplicacion"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/panta_texto"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/detalle_hora_contextual"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/autores"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>